RESOLVED FIXED256268
[LFC][Floating] LineBuilder shouldn't mutate float box geometry
https://bugs.webkit.org/show_bug.cgi?id=256268
Summary [LFC][Floating] LineBuilder shouldn't mutate float box geometry
alan
Reported 2023-05-03 12:28:53 PDT
but instead just return the list of placed floats.
Attachments
Patch (14.32 KB, patch)
2023-05-03 12:42 PDT, alan
no flags
Patch (15.76 KB, patch)
2023-05-03 15:34 PDT, alan
no flags
Patch (15.76 KB, patch)
2023-05-04 13:53 PDT, alan
no flags
[fast-cq]Patch (17.18 KB, patch)
2023-05-04 17:27 PDT, alan
no flags
alan
Comment 1 2023-05-03 12:42:34 PDT
alan
Comment 2 2023-05-03 15:34:51 PDT
Antti Koivisto
Comment 3 2023-05-04 08:44:22 PDT
Comment on attachment 466198 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=466198&action=review > Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:433 > + for (auto floatItem : intrinsicContent.placedFloats) why copy?
alan
Comment 4 2023-05-04 13:53:50 PDT
alan
Comment 5 2023-05-04 13:56:30 PDT
(In reply to Antti Koivisto from comment #3) > Comment on attachment 466198 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=466198&action=review > > > Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:433 > > + for (auto floatItem : intrinsicContent.placedFloats) > > why copy? indeed.
alan
Comment 6 2023-05-04 17:27:44 PDT
Created attachment 466216 [details] [fast-cq]Patch
EWS
Comment 7 2023-05-04 19:10:37 PDT
Committed 263704@main (6329f3456d6a): <https://commits.webkit.org/263704@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466216 [details].
Radar WebKit Bug Importer
Comment 8 2023-05-04 19:11:19 PDT
Note You need to log in before you can comment on or make changes to this bug.